app/assets/stylesheets/answers.scss
.answer-submit-form {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  width: 90%;
  .answer-field {
    font-size: 20px;
    border-color: #FAD1BE;
    border-radius: 10px;
    padding: 5px;
  }
  input[type='submit'] {
    margin-left: 10px;
    margin-top: 10px;
    border: none;
    width: 150px;
    padding: 10px;
    background-color: #FAD1BE;
    box-shadow: 2.5px 2.5px 10px rgb(173, 68, 19);
  }
}
.answers-container {
  width: 100%;
  .answer {
    padding: 10px;
    margin: 10px;
    border: 2px solid lightgray;
    border-radius: 20px;
    word-wrap: break-word;
    color: #49494A;
    .vote-buttons {
      display: flex;
      justify-content: center;
      align-items: center;
      margin: 10px;
      width: fit-content;
      margin-left: 0;
      .vote-button {
        border-color: #333232;
        background-color: #E0E0E0;
        box-shadow: none;
        color: #333232;
        margin: 10px;
        font-size: 10px;
        padding: 10px;
        line-height: 0;
        width: auto;
        height: auto;
      }
      .upvote {
        background-color: #C6EDBB;
      }
      .downvote {
        background-color: #F5C9C9;
      }
    }
  }
}

